Update mak3r_num accepted array
